deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: milnet-sso
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: "milnet-sso-cert"
spec:
  defaultBackend:
    service:
      name: milnet-sso
      port:
        number: 80
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: milnet-sso
                port:
                  number: 80
